
syntax = "proto3";

option csharp_namespace = "PatientMgmt.PatientGrpcService";

package patient;

service PatientProto{
  rpc GetPatientById (GetPatientByIdRequest) returns (GetPatientByIdResponse);
  rpc GetAllPatients (Empty) returns (GetAllPatientsResponse);
  rpc AddPatient (AddPatientRequest) returns (Empty);
  rpc UpdatePatient (UpdatePatientRequest) returns (Empty);
  rpc DeletePatient (DeletePatientRequest) returns (Empty);
}

message GetPatientByIdRequest {
  int32 id = 1;
}

message GetPatientByIdResponse {
  Patient patient = 1;
}

message AddPatientRequest {
  Patient patient = 1;
}

message UpdatePatientRequest {
  Patient patient = 1;
}

message DeletePatientRequest {
  int32 id = 1;
}

message Patient {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Empty {}

message GetAllPatientsResponse {
  repeated Patient patients = 1;
}
